--- a/15A_Intermediate_DSA_Strings.ipynb
+++ b/15A_Intermediate_DSA_Strings.ipynb
@@ -705,7 +705,7 @@
         "\n",
         "    curr_len = 0\n",
         "\n",
-        "    while l >= 0 and r <= n:\n",
+        "    while l >= 0 and r <= n-1:\n",
         "\n",
         "      if s[l] != s[r]:\n",
         "\n",
@@ -728,9 +728,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EM7SKJcQyt3b",
-        "outputId": "ff51497b-6d97-4d57-e3ad-aee45c08e9ce"
+        "outputId": "f9d284a9-10bf-4ccb-87d2-727d24e2ee49"
       },
-      "execution_count": 10,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -740,6 +740,95 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Class Question9:** Given a string. Find the longest palindromic substring."
+      ],
+      "metadata": {
+        "id": "z9mQq6ulBHt3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solution-1 - Using Recursion\n",
+        "\n",
+        "class Solution:\n",
+        "\n",
+        "    def longestPalindrome(self, s: str) -> str:\n",
+        "\n",
+        "        def findpal(s,l,r):\n",
+        "            \n",
+        "            ls = len(s)\n",
+        "        \n",
+        "            while l>=0 and r<ls and s[l]==s[r]:\n",
+        "            \n",
+        "                l-=1\n",
+        "                r+=1\n",
+        "            \n",
+        "            return s[l+1:r]\n",
+        "        \n",
+        "        \n",
+        "        output = \"\"\n",
+        "        \n",
+        "        for i in range(len(s)):\n",
+        "            \n",
+        "            l,r = i,i #odd lengths\n",
+        "            \n",
+        "            check_palindrome = findpal(s,l,r)\n",
+        "            \n",
+        "            if len(output) <len(check_palindrome):\n",
+        "                \n",
+        "                output = check_palindrome\n",
+        "                \n",
+        "            l,r = i,i+1\n",
+        "            \n",
+        "            check_palindrome = findpal(s,l,r)\n",
+        "            \n",
+        "            if len(output) <len(check_palindrome):\n",
+        "                \n",
+        "                output = check_palindrome\n",
+        "                \n",
+        "        return output\n",
+        "\n",
+        "X = Solution()\n",
+        "\n",
+        "print(X.longestPalindrome('dbsbc'))\n",
+        "print(X.longestPalindrome('dbbc'))\n",
+        "print(X.longestPalindrome('ababababababab'))\n",
+        "print(X.longestPalindrome('babaddtattarrattatddetartrateedredividerb'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m63jRSk2BTpD",
+        "outputId": "ea08871e-a2f5-4aa0-8aa1-6b5279779669"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "bsb\n",
+            "bb\n",
+            "ababababababa\n",
+            "ddtattarrattatdd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The above problem has a **T.C. -> O(N^2)** and S.C. -> **O(1)**"
+      ],
+      "metadata": {
+        "id": "_Dv6AY4RdLUS"
+      }
     }
   ]
 }
