--- a/3A_Intermediate_DSA_Time_Complexity_2.ipynb
+++ b/3A_Intermediate_DSA_Time_Complexity_2.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Intermediate DSA : Time Complexity - 2.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -276,12 +274,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Quiz5:** If we have f(N) = 2(2n),\n",
+        "**Quiz5:** If we have f(N) = 2^(2n),\n",
         "\n",
         "**Q:** Which of the following statements are true:\n",
-        "1. f(N) = 4N\n",
+        "1. f(N) = 4^N\n",
         "2. f(N) is O(2n)\n",
-        "3. f(N) is O(4n)\n",
+        "3. f(N) is O(4^n)\n",
         "\n",
         "**Ans:** 1 & 3"
       ],
