--- a/4A_Intermediate_DSA_Introduction_to_Arrays.ipynb
+++ b/4A_Intermediate_DSA_Introduction_to_Arrays.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Intermediate DSA : Introduction to Arrays.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -459,7 +457,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For the above problem, **T.C** -> O(1), **S.C** -> O(1)"
+        "For the above problem, **T.C** -> O(1), **S.C** -> O(N), because we are creating a new set inside print function"
       ],
       "metadata": {
         "id": "9UW9vLhtRJ4z"
